Fixes pagination button styles and td spacing

--- a/src/components/protected/GameSelect/Table/styles.module.scss
+++ b/src/components/protected/GameSelect/Table/styles.module.scss
@@ -8,11 +8,17 @@
   min-height: 280px;
 
   thead > tr {
-    border-bottom: 2px solid rgba(0, 0, 0, 0.2);
+    border-width: 0 0 2px;
+    border-style: solid;
   }
   tr {
-    max-height: $lh;
+    // height: 100%;
+    display: flex;
+    align-items: center;
+    height: $lh * 2;
+    margin: $lh/2 0;
     &:first-of-type {
+      margin: 0 0 $lh/2;
       th {
         font-weight: 800;
 
@@ -27,7 +33,7 @@
     }
 
     td {
-      max-height: $lh;
+      height: $lh * 2;
       padding: $lh/2 0;
       &:nth-child(1) {
         text-align: left;
@@ -57,6 +63,10 @@
 
     &.inactive {
       opacity: 0.2;
+    }
+
+    &.active {
+      cursor: pointer;
     }
   }
 }
